--- a/a/a.html
+++ b/a/a.html
@@ -12,7 +12,7 @@
     </div>
     <script>
         function a () {
-            console.log(1)
+            console.log(1+"a")
         }
         a();
     </script>
