--- a/a/b.html
+++ b/a/b.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <div class="box">
-        
+
     </div>
+    <script>
+    function b () {
+        console.log('b')
+    }
+    b();
+    </script>
 </body>
 </html>
