--- a/a/a.html
+++ b/a/a.html
@@ -7,12 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="box">
+    <div class="box" style="width:100%; background:pink;">
 
     </div>
     <script>
         function a () {
-            console.log(1+"a")
+            console.log(2+"a")
         }
         a();
     </script>
