--- a/a/a.html
+++ b/a/a.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="box" style="width:100%; background:pink;">
+    <div class="box" style="width:100%; background:pink; height:100px">
 
     </div>
     <script>
