--- a/a/a.html
+++ b/a/a.html
@@ -5,10 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./c.css"/>
+    <style>
+        .child{
+            width:300px;
+            height:100px;
+            background:pink;
+        }
+    </style>
 </head>
 <body>
-    <div class="box" style="width:100%; background:pink; height:100px">
+    <div class="box">
+        <div class="child">
 
+        </div>
     </div>
     <script>
         function a () {
